[gd_scene load_steps=5 format=2]

[ext_resource path="res://tests/test_menu_screens/TMenuScreens.gd" type="Script" id=1]
[ext_resource path="res://tests/test_menu_screens/CameraMenu.gd" type="Script" id=2]
[ext_resource path="res://scenes/tiles/maps/Example1.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/main_screens/MainMenu.tscn" type="PackedScene" id=4]

[node name="TMenuScreens" type="Node2D"]
script = ExtResource( 1 )

[node name="CameraMenu" type="Camera2D" parent="."]
position = Vector2( 180, -500 )
current = true
drag_margin_h_enabled = false
drag_margin_v_enabled = false
script = ExtResource( 2 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.7, 0.7 )

[node name="Example1" parent="ParallaxBackground/ParallaxLayer" instance=ExtResource( 3 )]

[node name="MainMenu" parent="." instance=ExtResource( 4 )]

[node name="MainMenu2" parent="." instance=ExtResource( 4 )]
position = Vector2( 540, 120 )

[connection signal="credits_pressed" from="MainMenu" to="." method="_on_MainMenu_credits_pressed"]
[connection signal="options_pressed" from="MainMenu" to="." method="_on_MainMenu_options_pressed"]
[connection signal="play_pressed" from="MainMenu" to="." method="_on_MainMenu_play_pressed"]
[connection signal="credits_pressed" from="MainMenu2" to="." method="_on_MainMenu_credits_pressed"]
[connection signal="options_pressed" from="MainMenu2" to="." method="_on_MainMenu_options_pressed"]
[connection signal="play_pressed" from="MainMenu2" to="." method="_on_MainMenu_play_pressed"]
